16-networkpolicies/networkpolicy-allow-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-demo-from-test-client
spec:
  podSelector:
    matchLabels:
      app: demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: test-client
      ports:
        - protocol: TCP
          port: 8080
